# SlothIOT

./: README.md  putfiles.sh  pyproject.toml
Client/: boot.py  client.py  config.py.dist  devices.py  main.py  senko.py
